<resources>
    <string name="app_name">Mobile Money</string>
    <string-array name="bank_names">
        <item>Πειραιώς</item>
        <item>Άλφα</item>
        <item>Eurobank</item>
        <item>Εθνική</item>
    </string-array>
    <array name="bank_logos">
        <item>@drawable/piraeusbank_en_new</item>
        <item>@drawable/alphabank_400x400</item>
        <item>@drawable/efg_eurobank_ergasias_squarelogo_1423814513987</item>
        <item>@drawable/ethniki</item>
    </array>
    <string-array name="task_titles">
        <item>TestLogin|Test Login</item>
        <item>ImportAccounts|Import Accounts</item>
    </string-array>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_register_sms_pin">Register - PIN</string>
    <string name="title_activity_add_bank">Add Bank</string>
    <string name="title_activity_edit_bank">Edit Bank</string>
    <string name="title_activity_save_imported_accounts">Save Imported Accounts</string>
    <string name="title_activity_edit_accounts">Edit Accounts</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_drawer">Mobile Money</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_register">Register</string>
    <string name="action_signout">Sign out</string>
    <string name="action_communicate">Communicate</string>
    <string name="action_help">Help</string>
    <string name="nav_group_support">Support</string>
    <string name="nav_item_banks">Banks</string>
    <string name="nav_item_accounts">Accounts</string>
    <string name="action_pay">Pay</string>
    <string name="action_collect">Collect</string>
    <string name="nav_configure">Configure</string>
    <string name="test_bank_dialog_title">Test Bank Credentials</string>
    <string name="test_bank_dialog_msg">Exercise caution when testing credentials. A Credentials testing is a login in the bank\'s web banking system. Banks lock an account after a number of invalid login attempts.</string>
    <string name="bank_credentials_encryption_msg">Your credentials will be encrypted and stored in your mobile device. They will be used only after fingerprint verification.</string>
    <string name="title_activity_banks">Banks</string>
    <string name="action_delete_bank">Delete</string>
    <string name="delete_bank_dialog_title">Delete Bank</string>
    <string name="action_add_bank">Add</string>
    <string name="action_test_bank">Test</string>
    <string name="show_password">Show password</string>
    <string name="fingeprint_authentication">Fingeprint authentication</string>
    <string name="needFingerprintPermission">You must grant Fingerprint permission to use Fingerprint Authentication</string>
    <string name="enrollFingeprints">Please enroll fingerprints to enable Fingerprint Authentication</string>
    <string name="info">Info</string>
    <string name="setupLockScreen">Please set up a device fingerprint or lock screen to enable Fingerprint Authentication</string>
    <string name="bankAdded">Bank {} was added</string>
    <string name="action_import_accounts">Import accounts</string>
    <string name="action_rerfesh_bank">Refresh Bank</string>
    <string name="tab_task_steps">Steps</string>
    <string name="tab_task_webview">Web</string>
    <string name="task_ask_continue">Stop between steps</string>
    <string name="task_continue_button_txt">Continue</string>
</resources>
