<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_pay"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/action_pay"/>
        <item
            android:id="@+id/nav_collect"
            android:icon="@drawable/ic_account_balance_wallet_black_24dp"
            android:title="@string/action_collect"/>
    </group>

    <group android:checkableBehavior="single">
        <item android:title="@string/nav_configure">
            <menu>
                <item
                    android:id="@+id/nav_banks"
                    android:icon="@drawable/ic_account_balance_black_24dp"
                    android:title="@string/nav_item_banks"/>
                <item
                    android:id="@+id/nav_accounts"
                    android:icon="@drawable/ic_attach_money_black_24dp"
                    android:title="@string/nav_item_accounts"/>
            </menu>
        </item>
    </group>

    <item android:title="@string/nav_group_support">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_black_24dp"
                android:title="@string/action_help"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/action_communicate"/>
        </menu>
    </item>

    <group android:id="@+id/grp2">
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_power_settings_new_black_24dp"
            android:title="@string/action_signout"/>
    </group>

</menu>
